<resources>
    <string name="app_name">Theft Scanner</string>
    <string name="Title_1">MAP</string>
    <string name="Subtitle_1">SHOW PLACE MARKERS</string>
    <string name="Title_2">STATISTICS</string>
    <string name="Subtitle_2">GET SUMMARY</string>
    <string name="Title_3">THEFT DETAILS</string>
    <string name="Subtitle_3">READ INFORMATION</string>
    <string name="Title_4">ADD</string>
    <string name="Subtitle_4">FILL IN THE FORM</string>
    <string name="Subtitle_Menu">DASHBOARD</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_details">Theft Details</string>
    <string name="signUpUser">CREATE</string>
    <string name="signInUser">LOG IN</string>
    <string name="message_signUp">New user? Create account here</string>
    <string name="message_signIn">Already have an account? Log in here</string>
    <string name="permission_required_toast">Location permission is required</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Theft Scanner\'.</string>
</resources>
